Release 1.5.1 realtime social sync and media
